--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix angular-src"
   },
   "author": "Camilo Avelar",
   "license": "ISC"
